Minor fixes in javadocs and variables